[gd_scene load_steps=66 format=3 uid="uid://caw2ba1o3nlf3"]

[ext_resource type="Script" path="res://src/Player/player.gd" id="1_s23x1"]
[ext_resource type="Texture2D" uid="uid://8ld342s2gtsg" path="res://sprites/2D_character_3_dir.png" id="2_xwh2p"]
[ext_resource type="Script" path="res://src/Player/PlayerSpriteSheet.gd" id="3_qpl8u"]
[ext_resource type="Texture2D" uid="uid://3bco4if2l2cc" path="res://sprites/fire_spritesheet_color.png" id="4_esdc1"]
[ext_resource type="Texture2D" uid="uid://bbxku27le7xqf" path="res://sprites/Mixamo_Spritesheet.png" id="5_5sjwa"]
[ext_resource type="Texture2D" uid="uid://xgto5bed82s3" path="res://src/Torch/torch_light_gradient.tres" id="5_lb4ke"]
[ext_resource type="Texture2D" uid="uid://divwmgmm6sj22" path="res://sprites/spotlight.png" id="6_v2l8l"]
[ext_resource type="AudioStream" uid="uid://dulkjghl5gv6t" path="res://sound/foot tile reverb.mp3" id="7_8snrs"]

[sub_resource type="Animation" id="Animation_ufwvx"]
resource_name = "idle_N"
length = 1.00001
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43]
}

[sub_resource type="Animation" id="Animation_aaxj6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_x6vs1"]
resource_name = "idle_NE"
length = 1.00001
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_0tpj8"]
resource_name = "idle_E"
length = 1.00001
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}

[sub_resource type="Animation" id="Animation_outd0"]
resource_name = "idle_SE"
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [52, 53, 54, 55]
}

[sub_resource type="Animation" id="Animation_7mblm"]
resource_name = "idle_S"
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59]
}

[sub_resource type="Animation" id="Animation_fh0su"]
resource_name = "walk_N"
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_ojgu5"]
resource_name = "walk_NE"
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_e2wyg"]
resource_name = "walk_E"
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_u1ibt"]
resource_name = "walk_SE"
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_2hdrb"]
resource_name = "walk_S"
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_8bsth"]
resource_name = "walkTorch_N"
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_20pij"]
resource_name = "walkTorch_NE"
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_gkon4"]
resource_name = "walkTorch_E"
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_lvgvk"]
resource_name = "walkTorch_SE"
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_eiuyu"]
resource_name = "walkTorch_S"
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g4b1j"]
_data = {
"RESET": SubResource("Animation_aaxj6"),
"idle_E": SubResource("Animation_0tpj8"),
"idle_N": SubResource("Animation_ufwvx"),
"idle_NE": SubResource("Animation_x6vs1"),
"idle_S": SubResource("Animation_7mblm"),
"idle_SE": SubResource("Animation_outd0"),
"walkTorch_E": SubResource("Animation_gkon4"),
"walkTorch_N": SubResource("Animation_8bsth"),
"walkTorch_NE": SubResource("Animation_20pij"),
"walkTorch_S": SubResource("Animation_eiuyu"),
"walkTorch_SE": SubResource("Animation_lvgvk"),
"walk_E": SubResource("Animation_e2wyg"),
"walk_N": SubResource("Animation_fh0su"),
"walk_NE": SubResource("Animation_ojgu5"),
"walk_S": SubResource("Animation_2hdrb"),
"walk_SE": SubResource("Animation_u1ibt")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ehpud"]
animation = &"idle_S"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_13ixg"]
animation = &"idle_N"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1i25x"]
animation = &"idle_E"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1n28l"]
animation = &"idle_SE"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4kajr"]
animation = &"idle_NE"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_k7kuj"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ehpud")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_13ixg")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_1i25x")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_1n28l")
blend_point_3/pos = Vector2(1, 1)
blend_point_4/node = SubResource("AnimationNodeAnimation_4kajr")
blend_point_4/pos = Vector2(1, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_boi56"]
animation = &"walk_S"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_svh6u"]
animation = &"walk_N"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1fcwk"]
animation = &"walk_E"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wid3u"]
animation = &"walk_SE"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gmp87"]
animation = &"walk_NE"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_pirgi"]
auto_triangles = false
blend_point_0/node = SubResource("AnimationNodeAnimation_boi56")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_svh6u")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_1fcwk")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_wid3u")
blend_point_3/pos = Vector2(1, 1)
blend_point_4/node = SubResource("AnimationNodeAnimation_gmp87")
blend_point_4/pos = Vector2(1, -1)
triangles = PackedInt32Array(0, 2, 3, 1, 2, 4)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1r66k"]
animation = &"walkTorch_S"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ttni6"]
animation = &"walkTorch_SE"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ejr6d"]
animation = &"walkTorch_E"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c0eoi"]
animation = &"walkTorch_NE"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mibnn"]
animation = &"walkTorch_N"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ssyns"]
auto_triangles = false
blend_point_0/node = SubResource("AnimationNodeAnimation_1r66k")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_ttni6")
blend_point_1/pos = Vector2(1, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_ejr6d")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_c0eoi")
blend_point_3/pos = Vector2(1, -1)
blend_point_4/node = SubResource("AnimationNodeAnimation_mibnn")
blend_point_4/pos = Vector2(0, -1)
triangles = PackedInt32Array(0, 1, 2, 2, 3, 4)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_235h4"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x2lk7"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h2qj0"]
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yssab"]
reset = false
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lsdpf"]
reset = false
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bgmbj"]
reset = false
switch_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0tv14"]
reset = false
switch_mode = 1

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_lagpi"]
states/Start/position = Vector2(191, 100)
states/idle/node = SubResource("AnimationNodeBlendSpace2D_k7kuj")
states/idle/position = Vector2(407, 91)
states/walk/node = SubResource("AnimationNodeBlendSpace2D_pirgi")
states/walk/position = Vector2(588, 83)
states/walkTorch/node = SubResource("AnimationNodeBlendSpace2D_ssyns")
states/walkTorch/position = Vector2(554, 181)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_235h4"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_x2lk7"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_h2qj0"), "walk", "walkTorch", SubResource("AnimationNodeStateMachineTransition_yssab"), "walkTorch", "walk", SubResource("AnimationNodeStateMachineTransition_lsdpf"), "walkTorch", "idle", SubResource("AnimationNodeStateMachineTransition_bgmbj"), "idle", "walkTorch", SubResource("AnimationNodeStateMachineTransition_0tv14")]
graph_offset = Vector2(33, 16)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_p6hqb"]

[sub_resource type="Animation" id="Animation_kmuj2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_xtqe3"]
resource_name = "idle_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hand/Torch:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_eprat"]
resource_name = "idle_right_torch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hand/Torch:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_gwsbx"]
resource_name = "walk_right"
length = 1.33335
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hand/Torch:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ss1l5"]
resource_name = "walk_right_torch"
length = 1.33335
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1, 1.16667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hand/Torch:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uyrqi"]
_data = {
"RESET": SubResource("Animation_kmuj2"),
"idle_right": SubResource("Animation_xtqe3"),
"idle_right_torch": SubResource("Animation_eprat"),
"walk_right": SubResource("Animation_gwsbx"),
"walk_right_torch": SubResource("Animation_ss1l5")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7iwev"]
radius = 6.99999
height = 22.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_r0jap"]
light_mode = 1

[sub_resource type="Animation" id="Animation_or2fv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_nawxl"]
resource_name = "flame"
length = 0.500013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_577h7"]
_data = {
"RESET": SubResource("Animation_or2fv"),
"flame": SubResource("Animation_nawxl")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_3ft3c"]
radius = 32.0624

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ajg61"]
height = 50.0

[node name="Player" type="CharacterBody2D"]
z_index = 1
z_as_relative = false
y_sort_enabled = true
collision_layer = 2
script = ExtResource("1_s23x1")

[node name="PlayerSpriteSheet" type="Sprite2D" parent="."]
visible = false
y_sort_enabled = true
position = Vector2(0, -18)
scale = Vector2(0.258734, 0.258734)
texture = ExtResource("2_xwh2p")
offset = Vector2(0, -28)
hframes = 9
vframes = 6
frame = 2
script = ExtResource("3_qpl8u")

[node name="AnimTimer" type="Timer" parent="PlayerSpriteSheet"]

[node name="FootstepAudio" type="AudioStreamPlayer" parent="PlayerSpriteSheet"]
stream = ExtResource("7_8snrs")
volume_db = -15.0
pitch_scale = 0.85

[node name="MixamoSpriteSheet" type="Sprite2D" parent="."]
position = Vector2(0, -24)
scale = Vector2(0.259, 0.259)
texture = ExtResource("5_5sjwa")
hframes = 4
vframes = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="MixamoSpriteSheet"]
libraries = {
"": SubResource("AnimationLibrary_g4b1j")
}

[node name="AnimationTree" type="AnimationTree" parent="MixamoSpriteSheet"]
tree_root = SubResource("AnimationNodeStateMachine_lagpi")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_p6hqb")
parameters/idle/blend_position = Vector2(0.400356, -0.930131)
parameters/walk/blend_position = Vector2(0.489324, 0.772926)
parameters/walkTorch/blend_position = Vector2(0.131673, 0.668122)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle_right"
libraries = {
"": SubResource("AnimationLibrary_uyrqi")
}

[node name="PlayerLight" type="PointLight2D" parent="."]
position = Vector2(0, -25)
color = Color(0.713726, 0.756863, 0.890196, 1)
energy = 0.35
shadow_enabled = true
shadow_color = Color(0, 0, 0, 1)
shadow_filter_smooth = 13.3
texture = ExtResource("5_lb4ke")
texture_scale = 0.25

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_7iwev")

[node name="Hand" type="Node2D" parent="."]
y_sort_enabled = true
texture_filter = 1
position = Vector2(16, -33)

[node name="Torch" type="Sprite2D" parent="Hand"]
y_sort_enabled = true
material = SubResource("CanvasItemMaterial_r0jap")
position = Vector2(0, -8)
scale = Vector2(0.139, 0.139)
texture = ExtResource("4_esdc1")
offset = Vector2(16.778, -76.747)
hframes = 12
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hand/Torch"]
autoplay = "flame"
libraries = {
"": SubResource("AnimationLibrary_577h7")
}

[node name="TorchLight" type="PointLight2D" parent="Hand/Torch"]
visible = false
z_index = 1
z_as_relative = false
y_sort_enabled = true
scale = Vector2(7.19424, 7.19424)
color = Color(1, 0.564706, 0.0901961, 1)
shadow_enabled = true
shadow_color = Color(0, 0, 0, 1)
shadow_filter_smooth = 8.2
texture = ExtResource("5_lb4ke")
texture_scale = 0.5

[node name="Flashlight" type="PointLight2D" parent="Hand"]
scale = Vector2(1, 0.5)
enabled = false
energy = 1.5
shadow_enabled = true
texture = ExtResource("6_v2l8l")

[node name="PickUpArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
position = Vector2(0, -22)
shape = SubResource("CircleShape2D_3ft3c")
debug_color = Color(0, 0.701961, 0.466667, 0.0705882)

[node name="RaycastTarget" type="Area2D" parent="."]
position = Vector2(0, -25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RaycastTarget"]
shape = SubResource("CapsuleShape2D_ajg61")
debug_color = Color(0.701961, 0, 0.0117647, 0.419608)

[node name="Target_01" type="Node2D" parent="RaycastTarget"]
position = Vector2(0, -23)

[node name="Target_02" type="Node2D" parent="RaycastTarget"]
position = Vector2(0, 1)

[node name="Target_03" type="Node2D" parent="RaycastTarget"]
position = Vector2(0, 25)
